c8-ingress.yaml
#apiVersion: networking.gke.io/v1
#kind: ManagedCertificate
#metadata:
#  name: c8-managed-cert
#  namespace: ${UNAMESPACE}
#spec:
#  domains:
#    - ${UNAMESPACE}.makelabs.in
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${UNAMESPACE}-ingress
  namespace: ${UNAMESPACE}
  labels:
    app: camunda-platform
    app.kubernetes.io/instance: ${UNAMESPACE}
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/part-of: camunda-platform
    helm.sh/chart: camunda-platform-12.0.0-alpha4  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    kubernetes.io/ingress.allow-http: "false"  # on ingress, we only allow HTTPS. 
    #networking.gke.io/managed-certificates: c8-managed-cert # shift to cf origin cert
    networking.gke.io/backend-protocol: "HTTP"  # Tell GKE to use HTTP to backend
    #cloud.google.com/healthcheck-path: "/console"
spec:
  tls:
    - hosts:
        - ${UNAMESPACE}.makelabs.in
      secretName: cf-origin-cert
  ingressClassName: "nginx"
  rules:
    - host: ${UNAMESPACE}.makelabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-landing-page-service
                port:
                  number: 80
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: ${UNAMESPACE}-console
                port:
                  number: 80
          - path: /optimize
            pathType: Prefix
            backend:
              service:
                name: ${UNAMESPACE}-optimize
                port:
                  number: 80
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: ${UNAMESPACE}-identity
                port:
                  number: 80
          - path: /connectors
            pathType: Prefix
            backend:
              service:
                name: ${UNAMESPACE}-connectors
                port:
                  number: 8080
          - path: /orchestration
            pathType: Prefix
            backend:
              service:
                name: ${UNAMESPACE}-zeebe
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ${UNAMESPACE}-identity
  namespace: ${UNAMESPACE}
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    cloud.google.com/backend-config: '{"default": "identity-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8084
    - name: metrics
      protocol: TCP
      port: 82
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ${UNAMESPACE}-connectors
  namespace: ${UNAMESPACE}
  annotations:
    cloud.google.com/backend-config: '{"default": "connectors-backendconfig"}'
---
apiVersion: v1
kind: Service
metadata:
  name: ${UNAMESPACE}-console
  namespace: ${UNAMESPACE}
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    cloud.google.com/backend-config: '{"default": "console-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: 9100
---
apiVersion: v1
kind: Service
metadata:
  name: ${UNAMESPACE}-zeebe
  namespace: ${UNAMESPACE}
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    cloud.google.com/backend-config: '{"default": "orchestration-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9600
      targetPort: 9600
---
apiVersion: v1
kind: Service
metadata:
  name: ${UNAMESPACE}-optimize
  namespace: ${UNAMESPACE}
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: ${UNAMESPACE}
    meta.helm.sh/release-namespace: ${UNAMESPACE}
    cloud.google.com/backend-config: '{"default": "optimize-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
    - name: metrics
      protocol: TCP
      port: 8092
      targetPort: 8092
